<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">&#x1F99E;小清虾</string>
    <string name="app_title">&#x1F99E;小清虾</string>
    <string name="current_backend">Backend: %1$s</string>
    <string name="configure_backend">Configure URL</string>
    <string name="reload_page">Reload</string>
    <string name="retry">Retry</string>
    <string name="error_title">Unable to open OpenClaw service</string>
    <string name="error_message">Please check network and backend URL.</string>
    <string name="file_chooser_title">Select file source</string>
    <string name="backend_dialog_title">Set backend URL</string>
    <string name="backend_dialog_hint">Example: http://192.168.1.50:8105</string>
    <string name="backend_dialog_save">Save and Reload</string>
    <string name="backend_dialog_cancel">Cancel</string>
    <string name="backend_dialog_reset">Reset default</string>
</resources>
